# extempore

./: .buildinfo  .clang-format  .clang-tidy  .dir-locals.el  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .test.sh.swp  .travis.yml  BUILDING.md  CHANGELOG  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakeRC.cmake  CTestConfig.cmake  INSTALL  INSTALL.md  MERGE_CHANGELOG.md  Makefile  README  README.md  SConstruct  about-this-documentation.html  all.bash  all.bat  appveyor.yml  audio-file-io.html  audio-signal-processing.html  audio.html  benchmarks.md  best-practices.html  bits-and-pieces.html  build.sh  c-xtlang-interop.html  caas.html  clean.bash  clean.bat  common-lisp-music.html  (+39 more)
.claude/skills/: extempore-debugging.md
.github/workflows/: build-and-test.yml  docs.yml  release-binary.yml  sanitizers.yml
_sources/: about-this-documentation.rst.txt  about-this-documentation.txt  audio-file-io.txt  audio-signal-processing.txt  audio.txt  best-practices.txt  caas.rst.txt  caas.txt  common-lisp-music.txt  concurrency.rst.txt  concurrency.txt  contributing.rst.txt  editor-support.txt  getting-help.rst.txt  graphics.rst.txt  impromptu-users.txt  index.rst.txt  index.txt  install.txt  installation.txt  making-an-instrument.txt  memory.rst.txt  memory.txt  note-level-music.txt  philosophy.rst.txt  quickstart.rst.txt  quickstart.txt  scheme-xtlang-interop.rst.txt  scheme-xtlang-interop.txt  testing.txt  turning-the-sound-off-in-extempore.txt  type-inference.txt
backlog/: config.yml
backlog/completed/: task-012 - update-external-graphics-libs.md  task-014 - check-cmake-cpack-packaging.md  task-022 - make-batch-flag-set-noaudio-as-well.md  task-040 - Audit-LLVM_SCHEME_FF_MAP-and-FFI-table-thread-safety.md  task-1 - Fix-LLVM-memcpy-intrinsic-signature-for-LLVM-21-compatibility.md  task-10 - update-EXTLLVM-to-use-C-apis-rather-than-string-munging.md  task-3 - build-minimal-set-of-llvm-components.md  (+7 more)
config/: .gitignore  darwin.make  linux.make  llvm.bash.sample  windows.make
docker/: trigger.sh
docs/: C-xtlang-interop.rst  Makefile  about-this-documentation.rst  astro.config.mjs  audio-signal-processing.rst  audio.rst  bits-and-pieces.rst  caas.rst  common-lisp-music.rst  concurrency.rst  conf.py  contributing.rst  docstrings.rst  editor-support.rst  generics.rst  graphics.rst  impromptu-users.rst  index.md  index.rst  install.rst  make.bat  making-an-instrument.rst  memory.rst  package-lock.json  package.json  philosophy.rst  quickstart.rst  sampler.rst  scheme-xtlang-interop.rst  time.rst  type-system.rst  types.rst  verify-examples.py  wishlist.rst
docs/api/: core.md  (+1 more)
examples/: 3dmodel.scm  3dmodel.xtm  audio_101.scm  audio_101.xtm  beat_detection.xtm  bittwiddling-101.scm  bullet.scm  bullet.xtm  common-lisp-music.md  drawing.scm  drawing.xtm  dsp_library.scm  dynamic_linking.scm  extempore_lang.scm  extempore_lang.xtm  extempore_lang_3.scm  fluid_dynamics.scm  fluid_dynamics.xtm  fluids_2d.scm  fluids_2d.xtm  glut-101.scm  gpu_image.scm  gpu_image.xtm  gstreamer.scm  gstreamer.xtm  horde3d_knight.scm  horde3d_knight.xtm  kinect.scm  kinect.xtm  kinect_fire.scm  kinect_fire.xtm  opencv.scm  opencv.xtm  opengl_101.scm  opengl_101.xtm  osc_101.scm  osc_101.xtm  particles.scm  particles.xtm  pc-ivl-lib.scm  (+12 more)
extras/: .emacs  bootstrap-windows-vm.ps1  exlog.el  extempore-compile.sh  extempore-llvm-3.4.2.patch  extempore-llvm-3.5.2.patch  extempore-llvm-3.7.0.patch  extempore-llvm-3.8.0.patch  extempore-llvm.patch  extempore-llvm.rb  extempore-minor.el  extempore-repl.el  extempore-ssh-tunnel-setup.sh  extempore.el  extempore.rb  extempore.vim  generate-xtmdoc.sh  gud.el.patch  integration-test.sh  llparser.patch  llvm.rb  make-dist.sh  make-tags.sh  mcjit.patch  ms_build_vars.bat  musl-libc.patch  provision-windows-azure.sh
extras/cmake/extempore-deps/: CMakeLists.txt
include/: AudioDevice.h  BranchPrediction.h  CM.h  EXTClosureAddressTable.h  EXTCondition.h  EXTLLVM.h  EXTMonitor.h  EXTMutex.h  EXTThread.h  EXTZones.h  LinenoiseREPL.h  OPDefines.h  OSC.h  PriorityQueue.h  Scheme.h  SchemeFFI.h  SchemePrivate.h  SchemeProcess.h  SchemeREPL.h  SchemeS7.h  SchemeS7Private.h  SimpleOpt.h  StopWatch.h  Task.h  TaskScheduler.h  UNIV.h  nanotime.h  s7.h
libs/: assimp-lib.scm  bullet_lib.xtm  cairo_lib.scm  cairo_lib.xtm  create-stdlib.xtm  dsp_library.scm  dsp_library.xtm  fft.xtm  fitslib.scm  fitslib.xtm  fluid2d_lib.scm  fluid2d_lib.xtm  glib.scm  glib.xtm  gsl.scm  gstreamer_lib.scm  gstreamer_lib.xtm  horde3d_lib.scm  horde3d_lib.xtm  image_lib.scm  image_lib.xtm  instruments.xtm  kinect_lib.scm  kinect_lib.xtm  kiss-fft.xtm  math.xtm  opencv_lib.scm  opengl_lib.scm  opengl_lib.xtm  particles.scm  particles.xtm  precompile-lib.xtm  shaders_lib.xtm  vdsp_library.scm  vdsp_library.xtm  xtm.xtm
msvc/: extempore.def  extempore.sln  extempore.vcxproj  ms_build_vars.bat  precomp.xtm
plans/: 2026-04-19-cpp-modernisation.md
runtime/: bitcode.ll  code.ir  comlist.scm  comlist.xtm  extempore.scm  extempore.xtm  init.ll  init.scm  init.xtm  inline.ll  llvmir.scm  llvmir.xtm  llvmir3.scm  llvmti-aot.xtm  llvmti-ast.xtm  llvmti-bind.xtm  llvmti-caches.xtm  llvmti-globals.xtm  llvmti-transforms.xtm  llvmti-typecheck.xtm  llvmti-types-bridge.xtm  llvmti-types.xtm  llvmti.scm  llvmti.xtm  llvmti3.scm  scheme.xtm  sort.scm  sort.xtm  xtc-aot.xtm  xtc-ast.xtm  xtc-bind.xtm  xtc-caches.xtm  xtc-codegen.xtm  xtc-driver.xtm  xtc-globals.xtm  xtc-infer.xtm  xtc-solve.xtm  xtc-transforms.xtm  xtc-typecheck.xtm  xtc-types-bridge.xtm  (+1 more)
src/: AudioDevice.cpp  EXTClosureAddressTable.cpp  EXTCondition.cpp  EXTLLVM.cpp  EXTMonitor.cpp  EXTMutex.cpp  EXTThread.cpp  EXTZones.cpp  Extempore.cpp  LinenoiseREPL.cpp  OSC.cpp  Scheme.cpp  SchemeFFI.cpp  SchemeProcess.cpp  SchemeREPL.cpp  SchemeS7.cpp  TaskScheduler.cpp  UNIV.cpp  component.make  extempore.def  extllvm.inc  nanotime.cpp  s7.c
tests/: all-core.xtm  all-external.xtm  all.xtm  failing.xtm  generics.xtm  libs.xtm  test.xtm  uncategorized.xtm  xtlang.xtm
tests/cpp-unit/: CMakeLists.txt  netutil_test.cpp  univ_test.cpp
(+988 files in other folders)
